# rex_codex_agent

./: .flake8  .gitignore  AGENTS.local.md  AGENTS.md  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  rex-agent.json
.codex_ci/: component_plan_hello_cli.json  component_plan_hello_greet.json  component_plan_readme.json  discriminator_feature_hello_cli.xml  discriminator_feature_readme.xml  discriminator_global_smoke.xml  discriminator_global_unit.xml  discriminator_result.json  events.jsonl  generator_critic_prompt.txt  generator_patch.diff  generator_prompt.txt  monitor.port  playbook_hello_cli.json  playbook_hello_cli.prompt  playbook_readme.json  playbook_readme.prompt  traceability_hello_cli.csv  traceability_readme.csv
documents/: design_review.md
for_external_GPT5_pro_audit/: audit_20251015212707.md  audit_20251015214523.md  audit_20251015220825.md  audit_20251016045436.md  audit_20251016051354.md  audit_20251016052416.md  audit_20251016181645.md  audit_20251016190447.md  audit_20251016203920.md  audit_20251016205948.md  audit_20251016213839.md  audit_20251016215502.md  audit_20251016231731.md  audit_20251017010320.md  (+42 more)
templates/: AGENTS.local.md  AGENTS.md  conftest.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt
templates/documents/assumption_ledgers/: README.md
templates/documents/feature_cards/: README.md  hello_cli.md  hello_greet.md
templates/documents/oracles/: README.md  oracles.yaml
templates/tests/enforcement/: test_docs_cli_sync.py  test_feature_card_status_parsing.py  test_runtime_boundary.py  test_specs.py
(+161 files in other folders)
