[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = []

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".venv", ".rex_agent", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "TID"]
ignore = []

[tool.mypy]
python_version = "3.11"
pretty = true
strict = true
warn_return_any = true
warn_unused_configs = true
