[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = []

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I", "UP", "TID"]
ignore = []
exclude = [".venv", "build", "dist"]

[tool.mypy]
python_version = "3.8"
pretty = true
strict = true
warn_return_any = true
warn_unused_configs = true
